# rust-the-complete-developer-guide-udmey

./: README.md
bank/src/: main.rs
deck/src/: main.rs
rust-web-service/: .env  Cargo.toml  README.md  rest-test.http  tasks.db
rust-web-service/src/: app.rs  main.rs
rust-web-service/src/db/: mod.rs
rust-web-service/src/handlers/: health.rs  tasks.rs
rust-web-service/src/middleware/: request_timer.rs
rust-web-service/src/models/: task.rs
rust-web-service/src/services/: task_service.rs
